{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 61,
  "lineage": "92331fbb-08d5-9c9e-8789-ae18f5f27344",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051f8eaff76e51d1e",
            "arn": "arn:aws:ec2:us-east-1:663130434850:elastic-ip/eipalloc-051f8eaff76e51d1e",
            "association_id": "eipassoc-092f24b16cee17c73",
            "domain": "vpc",
            "id": "eipalloc-051f8eaff76e51d1e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0418f91d88c7e94b4",
            "private_dns": "ip-10-0-1-151.ec2.internal",
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-35-174-47-12.compute-1.amazonaws.com",
            "public_ip": "35.174.47.12",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "travelmemory-nat-eip"
            },
            "tags_all": {
              "Name": "travelmemory-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "eipalloc-051f8eaff76e51d1e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:663130434850:instance/i-0b75fe8ea818d6df5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "travelmemory-ec2-profile",
            "id": "i-0b75fe8ea818d6df5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "SSH_KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-010bef3c27fcb60aa"
              }
            ],
            "primary_network_interface_id": "eni-010bef3c27fcb60aa",
            "private_dns": "ip-10-0-2-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.126",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-045eb927073b209c9",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f6aee62a40a1d5d",
            "tags": {
              "Name": "travelmemory-database",
              "Role": "database"
            },
            "tags_all": {
              "Name": "travelmemory-database",
              "Role": "database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f3ac80223ea70e51"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "i-0b75fe8ea818d6df5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.database",
            "aws_security_group.web",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:663130434850:instance/i-08e60b674ffe25010",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "travelmemory-ec2-profile",
            "id": "i-08e60b674ffe25010",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "SSH_KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00a1c25b3560a7340"
              }
            ],
            "primary_network_interface_id": "eni-00a1c25b3560a7340",
            "private_dns": "ip-10-0-1-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.193",
            "public_dns": "ec2-98-91-191-12.compute-1.amazonaws.com",
            "public_ip": "98.91.191.12",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00d69987831941426",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c02a3f21f888004",
            "tags": {
              "Name": "travelmemory-web",
              "Role": "web"
            },
            "tags_all": {
              "Name": "travelmemory-web",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d964367bf1ddaa79"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "i-08e60b674ffe25010",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663130434850:internet-gateway/igw-0236f4b3f77f339f7",
            "id": "igw-0236f4b3f77f339f7",
            "owner_id": "663130434850",
            "region": "us-east-1",
            "tags": {
              "Name": "travelmemory-igw"
            },
            "tags_all": {
              "Name": "travelmemory-igw"
            },
            "vpc_id": "vpc-0976e7494ff02160f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "igw-0236f4b3f77f339f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051f8eaff76e51d1e",
            "association_id": "eipassoc-092f24b16cee17c73",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0dbe7d154ca76b9dc",
            "network_interface_id": "eni-0418f91d88c7e94b4",
            "private_ip": "10.0.1.151",
            "public_ip": "35.174.47.12",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01c02a3f21f888004",
            "tags": {
              "Name": "travelmemory-nat"
            },
            "tags_all": {
              "Name": "travelmemory-nat"
            },
            "vpc_id": "vpc-0976e7494ff02160f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "nat-0dbe7d154ca76b9dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663130434850:route-table/rtb-01cc8c14c6b057d73",
            "id": "rtb-01cc8c14c6b057d73",
            "owner_id": "663130434850",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dbe7d154ca76b9dc",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "travelmemory-private-rt"
            },
            "tags_all": {
              "Name": "travelmemory-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0976e7494ff02160f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "rtb-01cc8c14c6b057d73",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663130434850:route-table/rtb-073f84933f980c356",
            "id": "rtb-073f84933f980c356",
            "owner_id": "663130434850",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0236f4b3f77f339f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "travelmemory-public-rt"
            },
            "tags_all": {
              "Name": "travelmemory-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0976e7494ff02160f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "rtb-073f84933f980c356",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048fc453f17518196",
            "region": "us-east-1",
            "route_table_id": "rtb-01cc8c14c6b057d73",
            "subnet_id": "subnet-06f6aee62a40a1d5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "rtbassoc-048fc453f17518196",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dd67978413febb6",
            "region": "us-east-1",
            "route_table_id": "rtb-073f84933f980c356",
            "subnet_id": "subnet-01c02a3f21f888004"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "rtbassoc-05dd67978413febb6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663130434850:security-group/sg-0f3ac80223ea70e51",
            "description": "Security group for TravelMemory MongoDB database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3ac80223ea70e51",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB from web server",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d964367bf1ddaa79"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "SSH from web server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d964367bf1ddaa79"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "travelmemory-db-sg",
            "name_prefix": "",
            "owner_id": "663130434850",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "travelmemory-database-sg"
            },
            "tags_all": {
              "Name": "travelmemory-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0976e7494ff02160f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "sg-0f3ac80223ea70e51",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663130434850:security-group/sg-0d964367bf1ddaa79",
            "description": "Security group for TravelMemory web/application server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d964367bf1ddaa79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TravelMemory backend",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "106.208.130.147/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "travelmemory-web-sg",
            "name_prefix": "",
            "owner_id": "663130434850",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "travelmemory-web-sg"
            },
            "tags_all": {
              "Name": "travelmemory-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0976e7494ff02160f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "sg-0d964367bf1ddaa79",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663130434850:subnet/subnet-06f6aee62a40a1d5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f6aee62a40a1d5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663130434850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "travelmemory-private-subnet"
            },
            "tags_all": {
              "Name": "travelmemory-private-subnet"
            },
            "vpc_id": "vpc-0976e7494ff02160f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "subnet-06f6aee62a40a1d5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663130434850:subnet/subnet-01c02a3f21f888004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c02a3f21f888004",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663130434850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "travelmemory-public-subnet"
            },
            "tags_all": {
              "Name": "travelmemory-public-subnet"
            },
            "vpc_id": "vpc-0976e7494ff02160f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "subnet-01c02a3f21f888004",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663130434850:vpc/vpc-0976e7494ff02160f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d50fad1199ee01be",
            "default_route_table_id": "rtb-0813fdb33087ccb09",
            "default_security_group_id": "sg-00643eeb485361ffc",
            "dhcp_options_id": "dopt-02cd156e5de252014",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0976e7494ff02160f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0813fdb33087ccb09",
            "owner_id": "663130434850",
            "region": "us-east-1",
            "tags": {
              "Name": "travelmemory-vpc"
            },
            "tags_all": {
              "Name": "travelmemory-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663130434850",
            "id": "vpc-0976e7494ff02160f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}